##########################
# Setup.py Configuration #
##########################
[metadata]
name = qsprpred
long_description = file: README.md
long_description_content_type = text/markdown

# Search tags
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =

[options]
install_requires =
    parameterized
    numpy >= 1.19, <1.24.0 
    scikit-learn >= 1.0.2
    pandas >= 1.2.2
    torch >= 1.7.0
    matplotlib >= 2.0
    chembl_structure_pipeline >= 1.2.0
    rdkit
    optuna
    gitpython
    xgboost
    Mordred
    boruta
    tqdm
    sklearn-json @ git+https://github.com/OlivierBeq/sklearn-json.git#egg=sklearn-json
    papyrus_scripts @ git+https://github.com/OlivierBeq/Papyrus-scripts.git@master
    mold2-pywrapper
    padel-pywrapper >= 1.0.2.post1
    prodec
    biopython

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8, <3.11

# Where is my code
packages = find:
;package_dir =
;    = qsprpred

;[options.packages.find]
;where = qsprpred

[options.package_data]
* = test_files/data/*.*, test_data/*.*, test_files/test_predictor/qspr/models/SVC_CLASSIFICATION/*.*,*.json


;[options.entry_points]
;console_scripts =
;    qsprpred = qsprpred.cli:main